--- a/test/assets/css/styles.css
+++ b/test/assets/css/styles.css
@@ -440,6 +440,17 @@ body::before {
 .body__bgGrads span {
   display: block;
   position: absolute;
+  background: #eeeeee;
+  /* Old browsers */
+  /* FF3.6+ */
+  /* Chrome,Safari4+ */
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(-45deg, #eeeeee 0%, #eeeeee 100%);
+  /* Opera 11.10+ */
+  /* IE10+ */
+  background: -o-linear-gradient(135deg, #eeeeee 0%, #eeeeee 100%);
+  background: linear-gradient(-45deg, #eeeeee 0%, #eeeeee 100%);
+  /* W3C */
 }
 
 .body__bgGrads span:nth-child(1) {
@@ -448,6 +459,8 @@ body::before {
   background: -o-linear-gradient(47.26deg, rgba(255, 199, 0, 0.91) -14.43%, #ff5c00 57.22%);
   background: linear-gradient(42.74deg, rgba(255, 199, 0, 0.91) -14.43%, #ff5c00 57.22%);
   opacity: 0.5;
+  -webkit-filter: blur(119px);
+  filter: blur(119px);
   top: -491px;
   right: -394px;
 }
@@ -457,6 +470,8 @@ body::before {
   height: 598px;
   background: -o-linear-gradient(216.3deg, rgba(255, 199, 0, 0.455) 16.01%, rgba(255, 92, 0, 0.5) 61.23%);
   background: linear-gradient(233.7deg, rgba(255, 199, 0, 0.455) 16.01%, rgba(255, 92, 0, 0.5) 61.23%);
+  -webkit-filter: blur(119px);
+  filter: blur(119px);
   left: -314px;
   top: 378px;
 }
@@ -467,6 +482,8 @@ body::before {
   background: -o-linear-gradient(47.26deg, rgba(255, 199, 0, 0.91) -14.43%, #ff5c00 57.22%);
   background: linear-gradient(42.74deg, rgba(255, 199, 0, 0.91) -14.43%, #ff5c00 57.22%);
   opacity: 0.5;
+  -webkit-filter: blur(119px);
+  filter: blur(119px);
   top: 1640px;
   right: -370px;
 }
@@ -479,11 +496,15 @@ body::before {
   opacity: 0.5;
   left: -360px;
   top: 2590px;
+  -webkit-filter: blur(119px);
+  filter: blur(119px);
 }
 
 .body__bgGrads span:nth-child(5) {
   background: -o-linear-gradient(47.26deg, rgba(255, 199, 0, 0.455) -14.43%, rgba(255, 92, 0, 0.5) 57.22%);
   background: linear-gradient(42.74deg, rgba(255, 199, 0, 0.455) -14.43%, rgba(255, 92, 0, 0.5) 57.22%);
+  -webkit-filter: blur(119px);
+  filter: blur(119px);
   width: 598px;
   height: 598px;
   right: -390px;
@@ -526,6 +547,8 @@ body::before {
   height: 285px;
   top: 1782px;
   left: calc(50% + 738px);
+  -webkit-filter: blur(8px);
+  filter: blur(8px);
   -webkit-transform: matrix(-1, 0, 0, 1, 0, 0);
   -ms-transform: matrix(-1, 0, 0, 1, 0, 0);
   transform: matrix(-1, 0, 0, 1, 0, 0);
@@ -551,6 +574,8 @@ body::before {
 .body__bgCoins span:nth-child(7) {
   width: 285px;
   height: 285px;
+  -webkit-filter: blur(8px);
+  filter: blur(8px);
   -webkit-transform: matrix(-1, 0, 0, 1, 0, 0);
   -ms-transform: matrix(-1, 0, 0, 1, 0, 0);
   transform: matrix(-1, 0, 0, 1, 0, 0);
@@ -1516,6 +1541,8 @@ body::before {
   right: -84px;
   bottom: 84px;
   z-index: -4;
+  -webkit-filter: blur(8px);
+  filter: blur(8px);
   -webkit-transform: matrix(-1, 0, 0, 1, 0, 0);
   -ms-transform: matrix(-1, 0, 0, 1, 0, 0);
   transform: matrix(-1, 0, 0, 1, 0, 0);
@@ -1536,6 +1563,8 @@ body::before {
   background: -o-linear-gradient(267.56deg, rgba(255, 199, 0, 0.91) -10.91%, #ff5c00 50.06%);
   background: linear-gradient(182.44deg, rgba(255, 199, 0, 0.91) -10.91%, #ff5c00 50.06%);
   opacity: 0.5;
+  -webkit-filter: blur(119px);
+  filter: blur(119px);
 }
 
 .textSect {
@@ -1591,6 +1620,8 @@ body::before {
   .body__bgGrads span:nth-child(1) {
     width: 35.7575vw;
     height: 35.7575vw;
+    -webkit-filter: blur(6.0101vw);
+    filter: blur(6.0101vw);
     top: -24.7979vw;
     right: -19.8989vw;
   }
@@ -1598,6 +1629,8 @@ body::before {
   .body__bgGrads span:nth-child(2) {
     width: 30.202vw;
     height: 30.202vw;
+    -webkit-filter: blur(6.0101vw);
+    filter: blur(6.0101vw);
     left: -15.8585vw;
     top: 19.0909vw;
   }
@@ -1605,6 +1638,8 @@ body::before {
   .body__bgGrads span:nth-child(3) {
     width: 30.202vw;
     height: 30.202vw;
+    -webkit-filter: blur(6.0101vw);
+    filter: blur(6.0101vw);
     top: 82.8282vw;
     right: -18.6868vw;
   }
@@ -1614,9 +1649,13 @@ body::before {
     height: 30.202vw;
     left: -18.1818vw;
     top: 130.808vw;
+    -webkit-filter: blur(6.0101vw);
+    filter: blur(6.0101vw);
   }
 
   .body__bgGrads span:nth-child(5) {
+    -webkit-filter: blur(6.0101vw);
+    filter: blur(6.0101vw);
     width: 30.202vw;
     height: 30.202vw;
     right: -19.6969vw;
@@ -1653,6 +1692,8 @@ body::before {
     height: 14.3939vw;
     top: 90vw;
     left: calc(50% + 37.2727vw);
+    -webkit-filter: blur(0.404vw);
+    filter: blur(0.404vw);
   }
 
   .body__bgCoins span:nth-child(5) {
@@ -1675,6 +1716,8 @@ body::before {
   .body__bgCoins span:nth-child(7) {
     width: 14.3939vw;
     height: 14.3939vw;
+    -webkit-filter: blur(0.404vw);
+    filter: blur(0.404vw);
     top: 209.1919vw;
     left: calc(50% + 7.8787vw);
   }
@@ -1701,6 +1744,8 @@ body::before {
     height: 6.7676vw;
     top: 101.2626vw;
     left: calc(50% - 35.555vw);
+    -webkit-filter: blur(0.2222vw);
+    filter: blur(0.2222vw);
     -webkit-transform: matrix(-1, 0, 0, 1, 0, 0);
     -ms-transform: matrix(-1, 0, 0, 1, 0, 0);
     transform: matrix(-1, 0, 0, 1, 0, 0);
@@ -2015,6 +2060,8 @@ body::before {
     height: 14.3939vw;
     right: -4.2424vw;
     bottom: -4.2424vw;
+    -webkit-filter: blur(0.404vw);
+    filter: blur(0.404vw);
   }
 
   .payments__wrapper {
@@ -2460,6 +2507,8 @@ body::before {
     background: -o-linear-gradient(47.26deg, rgba(255, 199, 0, 0.91) -54.08%, #ff5c00 17.57%);
     background: linear-gradient(42.74deg, rgba(255, 199, 0, 0.91) -54.08%, #ff5c00 17.57%);
     opacity: 0.6;
+    -webkit-filter: blur(119px);
+    filter: blur(119px);
     -webkit-transform: rotate(60.5deg) scale(0.7);
     -ms-transform: rotate(60.5deg) scale(0.7);
     transform: rotate(60.5deg) scale(0.7);
@@ -2474,6 +2523,8 @@ body::before {
     background: -o-linear-gradient(47.26deg, rgba(255, 199, 0, 0.91) -54.08%, #ff5c00 17.57%);
     background: linear-gradient(42.74deg, rgba(255, 199, 0, 0.91) -54.08%, #ff5c00 17.57%);
     opacity: 0.6;
+    -webkit-filter: blur(119px);
+    filter: blur(119px);
     -webkit-transform: rotate(90deg) scale(0.7);
     -ms-transform: rotate(90deg) scale(0.7);
     transform: rotate(90deg) scale(0.7);
@@ -2491,6 +2542,8 @@ body::before {
     background: -o-linear-gradient(47.26deg, rgba(255, 199, 0, 0.91) -14.43%, #ff5c00 57.22%);
     background: linear-gradient(42.74deg, rgba(255, 199, 0, 0.91) -14.43%, #ff5c00 57.22%);
     opacity: 0.6;
+    -webkit-filter: blur(119px);
+    filter: blur(119px);
     top: 1647px;
   }
 
@@ -2502,6 +2555,8 @@ body::before {
     background: -o-linear-gradient(47.26deg, rgba(255, 199, 0, 0.91) -54.08%, #ff5c00 17.57%);
     background: linear-gradient(42.74deg, rgba(255, 199, 0, 0.91) -54.08%, #ff5c00 17.57%);
     opacity: 0.6;
+    -webkit-filter: blur(119px);
+    filter: blur(119px);
     -webkit-transform: rotate(60.5deg) scale(0.8);
     -ms-transform: rotate(60.5deg) scale(0.8);
     transform: rotate(60.5deg) scale(0.8);
@@ -2515,6 +2570,8 @@ body::before {
     background: -o-linear-gradient(47.26deg, rgba(255, 199, 0, 0.91) -54.08%, #ff5c00 17.57%);
     background: linear-gradient(42.74deg, rgba(255, 199, 0, 0.91) -54.08%, #ff5c00 17.57%);
     opacity: 0.6;
+    -webkit-filter: blur(119px);
+    filter: blur(119px);
     -webkit-transform: rotate(-27.36deg) scale(0.7);
     -ms-transform: rotate(-27.36deg) scale(0.7);
     transform: rotate(-27.36deg) scale(0.7);
@@ -2533,6 +2590,8 @@ body::before {
     -webkit-transform: rotate(80.71deg);
     -ms-transform: rotate(80.71deg);
     transform: rotate(80.71deg);
+    -webkit-filter: blur(0px);
+    filter: blur(0px);
   }
 
   .body__bgCoins span:nth-child(2) {
@@ -2540,6 +2599,8 @@ body::before {
     height: 56px;
     top: 708px;
     left: calc(50% - 124px);
+    -webkit-filter: blur(2px);
+    filter: blur(2px);
     -webkit-transform: rotate(-4.72deg);
     -ms-transform: rotate(-4.72deg);
     transform: rotate(-4.72deg);
@@ -2553,6 +2614,8 @@ body::before {
     -webkit-transform: rotate(80.71deg);
     -ms-transform: rotate(80.71deg);
     transform: rotate(80.71deg);
+    -webkit-filter: blur(0px);
+    filter: blur(0px);
   }
 
   .body__bgCoins span:nth-child(4) {
@@ -2560,6 +2623,8 @@ body::before {
     height: 56px;
     top: 2300px;
     left: calc(50% - 156px);
+    -webkit-filter: blur(2px);
+    filter: blur(2px);
     -webkit-transform: rotate(-4.72deg);
     -ms-transform: rotate(-4.72deg);
     transform: rotate(-4.72deg);
@@ -2573,6 +2638,8 @@ body::before {
     -webkit-transform: rotate(8.25deg);
     -ms-transform: rotate(8.25deg);
     transform: rotate(8.25deg);
+    -webkit-filter: blur(0px);
+    filter: blur(0px);
   }
 
   .body__bgCoins span:nth-child(6) {
@@ -2583,6 +2650,8 @@ body::before {
     -webkit-transform: rotate(59.74deg);
     -ms-transform: rotate(59.74deg);
     transform: rotate(59.74deg);
+    -webkit-filter: blur(0px);
+    filter: blur(0px);
   }
 
   .body__bgCoins span:nth-child(7) {
@@ -2593,6 +2662,8 @@ body::before {
     -webkit-transform: rotate(8.25deg);
     -ms-transform: rotate(8.25deg);
     transform: rotate(8.25deg);
+    -webkit-filter: blur(0px);
+    filter: blur(0px);
   }
 
   .body__bgCoins span:nth-child(8),
@@ -2601,6 +2672,8 @@ body::before {
   }
 
   .body__bgCoins span:nth-child(9) {
+    -webkit-filter: blur(0px);
+    filter: blur(0px);
     width: 65px;
     height: 65px;
     -webkit-transform: rotate(59.74deg);
@@ -3022,6 +3095,8 @@ body::before {
     background: -o-linear-gradient(47.26deg, rgba(255, 199, 0, 0.91) -54.08%, #ff5c00 17.57%);
     background: linear-gradient(42.74deg, rgba(255, 199, 0, 0.91) -54.08%, #ff5c00 17.57%);
     opacity: 0.6;
+    -webkit-filter: blur(119px);
+    filter: blur(119px);
     bottom: -178px;
   }
 }
