--- a/test/assets/css/styles.css
+++ b/test/assets/css/styles.css
@@ -1945,6 +1945,330 @@ body::before {
   height: 56px;
 }
 
+.loader {
+  z-index: 100000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-transition: all 0.12s ease-in-out;
+  -o-transition: all 0.12s ease-in-out;
+  transition: all 0.12s ease-in-out;
+  background: -o-radial-gradient(#222, #101010);
+  background: radial-gradient(#222, #101010);
+}
+
+.loader:not(.active) {
+  -webkit-transform: translateY(-160vw);
+  -ms-transform: translateY(-160vw);
+  transform: translateY(-160vw);
+}
+
+.loader span {
+  display: inline-block;
+  position: relative;
+  width: 30px;
+  height: 30px;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  border-width: 2px;
+  border-color: #e2a9e5;
+}
+
+.loader span:before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  background-color: rgba(226, 169, 229, 0.5);
+  border-radius: 50%;
+  left: -8px;
+  top: -8px;
+}
+
+.loader span:first-of-type {
+  border-bottom-style: solid;
+  border-left-style: solid;
+  -webkit-animation: panL 2.5s 0s ease-in-out alternate infinite;
+  animation: panL 2.5s 0s ease-in-out alternate infinite;
+}
+
+.loader span:first-of-type:before {
+  -webkit-animation: slideL 2.5s 0s linear alternate infinite;
+  animation: slideL 2.5s 0s linear alternate infinite;
+}
+
+.loader span:last-of-type {
+  border-top-style: solid;
+  border-right-style: solid;
+  -webkit-animation: panR 2.5s 0s ease-in-out alternate infinite;
+  animation: panR 2.5s 0s ease-in-out alternate infinite;
+}
+
+.loader span:last-of-type:before {
+  -webkit-animation: slideR 2.5s 0s linear alternate infinite;
+  animation: slideR 2.5s 0s linear alternate infinite;
+}
+
+.loader__center {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: rgba(75, 56, 76, 0.25);
+  -webkit-box-shadow: 0px 0px 0px 2px rgba(99, 44, 101, 0.75);
+  box-shadow: 0px 0px 0px 2px rgba(99, 44, 101, 0.75);
+  -webkit-animation: spin 2.5s cubic-bezier(0.75, 0, 0, 0.75) forwards infinite;
+  animation: spin 2.5s cubic-bezier(0.75, 0, 0, 0.75) forwards infinite;
+}
+
+.loader__center:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  bottom: 5px;
+  left: 5px;
+  border: 1px solid rgba(99, 44, 101, 0.25);
+  border-radius: 50%;
+}
+
+.loader__center:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 40px;
+  right: 40px;
+  bottom: 40px;
+  left: 40px;
+  background-color: #632c65;
+  border-radius: 50%;
+  -webkit-animation: pulse 2.5s ease-in-out alternate infinite;
+  animation: pulse 2.5s ease-in-out alternate infinite;
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+
+  50% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+
+  50% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
+  }
+}
+
+@-webkit-keyframes panL {
+  0% {
+    -webkit-transform: translate(0px, 0px) rotate(45deg);
+    transform: translate(0px, 0px) rotate(45deg);
+  }
+
+  50% {
+    -webkit-transform: translate(15px, 0px) rotate(45deg);
+    transform: translate(15px, 0px) rotate(45deg);
+  }
+
+  100% {
+    -webkit-transform: translate(0px, 0px) rotate(45deg);
+    transform: translate(0px, 0px) rotate(45deg);
+  }
+}
+
+@keyframes panL {
+  0% {
+    -webkit-transform: translate(0px, 0px) rotate(45deg);
+    transform: translate(0px, 0px) rotate(45deg);
+  }
+
+  50% {
+    -webkit-transform: translate(15px, 0px) rotate(45deg);
+    transform: translate(15px, 0px) rotate(45deg);
+  }
+
+  100% {
+    -webkit-transform: translate(0px, 0px) rotate(45deg);
+    transform: translate(0px, 0px) rotate(45deg);
+  }
+}
+
+@-webkit-keyframes panR {
+  0% {
+    -webkit-transform: translate(0px, 0px) rotate(45deg);
+    transform: translate(0px, 0px) rotate(45deg);
+  }
+
+  50% {
+    -webkit-transform: translate(-15px, 0px) rotate(45deg);
+    transform: translate(-15px, 0px) rotate(45deg);
+  }
+
+  100% {
+    -webkit-transform: translate(0px, 0px) rotate(45deg);
+    transform: translate(0px, 0px) rotate(45deg);
+  }
+}
+
+@keyframes panR {
+  0% {
+    -webkit-transform: translate(0px, 0px) rotate(45deg);
+    transform: translate(0px, 0px) rotate(45deg);
+  }
+
+  50% {
+    -webkit-transform: translate(-15px, 0px) rotate(45deg);
+    transform: translate(-15px, 0px) rotate(45deg);
+  }
+
+  100% {
+    -webkit-transform: translate(0px, 0px) rotate(45deg);
+    transform: translate(0px, 0px) rotate(45deg);
+  }
+}
+
+@-webkit-keyframes slideL {
+  0% {
+    -webkit-transform: translate(0px, 0px) scale(0.5);
+    transform: translate(0px, 0px) scale(0.5);
+  }
+
+  50% {
+    -webkit-transform: translate(0px, 30px) scale(1.25);
+    transform: translate(0px, 30px) scale(1.25);
+  }
+
+  100% {
+    -webkit-transform: translate(30px, 30px) scale(0.5);
+    transform: translate(30px, 30px) scale(0.5);
+  }
+}
+
+@keyframes slideL {
+  0% {
+    -webkit-transform: translate(0px, 0px) scale(0.5);
+    transform: translate(0px, 0px) scale(0.5);
+  }
+
+  50% {
+    -webkit-transform: translate(0px, 30px) scale(1.25);
+    transform: translate(0px, 30px) scale(1.25);
+  }
+
+  100% {
+    -webkit-transform: translate(30px, 30px) scale(0.5);
+    transform: translate(30px, 30px) scale(0.5);
+  }
+}
+
+@-webkit-keyframes slideR {
+  0% {
+    -webkit-transform: translate(0px, 0px) scale(0.5);
+    transform: translate(0px, 0px) scale(0.5);
+  }
+
+  50% {
+    -webkit-transform: translate(30px, 0px) scale(1.25);
+    transform: translate(30px, 0px) scale(1.25);
+  }
+
+  100% {
+    -webkit-transform: translate(30px, 30px) scale(0.5);
+    transform: translate(30px, 30px) scale(0.5);
+  }
+}
+
+@keyframes slideR {
+  0% {
+    -webkit-transform: translate(0px, 0px) scale(0.5);
+    transform: translate(0px, 0px) scale(0.5);
+  }
+
+  50% {
+    -webkit-transform: translate(30px, 0px) scale(1.25);
+    transform: translate(30px, 0px) scale(1.25);
+  }
+
+  100% {
+    -webkit-transform: translate(30px, 30px) scale(0.5);
+    transform: translate(30px, 30px) scale(0.5);
+  }
+}
+
 /* ================================================= */
 
 /* ================================================= */
