--- a/test/assets/css/styles.css
+++ b/test/assets/css/styles.css
@@ -1974,54 +1974,6 @@ body::before {
   transform: translateY(-160vh);
 }
 
-.loader span {
-  display: inline-block;
-  position: relative;
-  width: 30px;
-  height: 30px;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-  border-width: 2px;
-  border-color: #e2a9e5;
-}
-
-.loader span:before {
-  content: "";
-  display: block;
-  position: absolute;
-  width: 14px;
-  height: 14px;
-  background-color: rgba(226, 169, 229, 0.5);
-  border-radius: 50%;
-  left: -8px;
-  top: -8px;
-}
-
-.loader span:first-of-type {
-  border-bottom-style: solid;
-  border-left-style: solid;
-  -webkit-animation: panL 2.5s 0s ease-in-out alternate infinite;
-  animation: panL 2.5s 0s ease-in-out alternate infinite;
-}
-
-.loader span:first-of-type:before {
-  -webkit-animation: slideL 2.5s 0s linear alternate infinite;
-  animation: slideL 2.5s 0s linear alternate infinite;
-}
-
-.loader span:last-of-type {
-  border-top-style: solid;
-  border-right-style: solid;
-  -webkit-animation: panR 2.5s 0s ease-in-out alternate infinite;
-  animation: panR 2.5s 0s ease-in-out alternate infinite;
-}
-
-.loader span:last-of-type:before {
-  -webkit-animation: slideR 2.5s 0s linear alternate infinite;
-  animation: slideR 2.5s 0s linear alternate infinite;
-}
-
 .loader__center {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2039,233 +1991,90 @@ body::before {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background-color: rgba(75, 56, 76, 0.25);
-  -webkit-box-shadow: 0px 0px 0px 2px rgba(99, 44, 101, 0.75);
-  box-shadow: 0px 0px 0px 2px rgba(99, 44, 101, 0.75);
-  -webkit-animation: spin 2.5s cubic-bezier(0.75, 0, 0, 0.75) forwards infinite;
-  animation: spin 2.5s cubic-bezier(0.75, 0, 0, 0.75) forwards infinite;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
-.loader__center:before {
+.loader__ld {
+  margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+}
+
+.loader__ld::before {
   content: "";
-  display: block;
   position: absolute;
-  top: 5px;
-  right: 5px;
-  bottom: 5px;
-  left: 5px;
-  border: 1px solid rgba(99, 44, 101, 0.25);
-  border-radius: 50%;
 }
 
-.loader__center:after {
-  content: "";
+.loader__ld::before,
+.loader__ld > span {
   display: block;
-  position: absolute;
-  top: 40px;
-  right: 40px;
-  bottom: 40px;
-  left: 40px;
-  background-color: #632c65;
+  width: 14.2857142857px;
+  height: 14.2857142857px;
   border-radius: 50%;
-  -webkit-animation: pulse 2.5s ease-in-out alternate infinite;
-  animation: pulse 2.5s ease-in-out alternate infinite;
+  background: #eaeaea;
+  -webkit-animation-name: to-right;
+  animation-name: to-right;
+  -webkit-animation-duration: 500ms;
+  animation-duration: 500ms;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
 }
 
-@-webkit-keyframes pulse {
-  0% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
+.loader__ld > span:nth-child(even) {
+  visibility: hidden;
+}
+
+.loader__ld > span:first-child {
+  -webkit-animation-name: scale-up;
+  animation-name: scale-up;
+}
+
+.loader__ld > span:last-child {
+  -webkit-animation-name: scale-up;
+  animation-name: scale-up;
+  animation-direction: reverse;
+}
+
+@-webkit-keyframes to-right {
+  to {
+    -webkit-transform: translateX(200%);
+    transform: translateX(200%);
   }
+}
 
-  50% {
+@keyframes to-right {
+  to {
+    -webkit-transform: translateX(200%);
+    transform: translateX(200%);
+  }
+}
+
+@-webkit-keyframes scale-up {
+  from {
     -webkit-transform: scale(0);
     transform: scale(0);
   }
 
-  100% {
+  to {
     -webkit-transform: scale(1);
     transform: scale(1);
   }
 }
 
-@keyframes pulse {
-  0% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-  }
-
-  50% {
+@keyframes scale-up {
+  from {
     -webkit-transform: scale(0);
     transform: scale(0);
   }
 
-  100% {
+  to {
     -webkit-transform: scale(1);
     transform: scale(1);
-  }
-}
-
-@-webkit-keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(359deg);
-    transform: rotate(359deg);
-  }
-}
-
-@keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(359deg);
-    transform: rotate(359deg);
-  }
-}
-
-@-webkit-keyframes panL {
-  0% {
-    -webkit-transform: translate(0px, 0px) rotate(45deg);
-    transform: translate(0px, 0px) rotate(45deg);
-  }
-
-  50% {
-    -webkit-transform: translate(15px, 0px) rotate(45deg);
-    transform: translate(15px, 0px) rotate(45deg);
-  }
-
-  100% {
-    -webkit-transform: translate(0px, 0px) rotate(45deg);
-    transform: translate(0px, 0px) rotate(45deg);
-  }
-}
-
-@keyframes panL {
-  0% {
-    -webkit-transform: translate(0px, 0px) rotate(45deg);
-    transform: translate(0px, 0px) rotate(45deg);
-  }
-
-  50% {
-    -webkit-transform: translate(15px, 0px) rotate(45deg);
-    transform: translate(15px, 0px) rotate(45deg);
-  }
-
-  100% {
-    -webkit-transform: translate(0px, 0px) rotate(45deg);
-    transform: translate(0px, 0px) rotate(45deg);
-  }
-}
-
-@-webkit-keyframes panR {
-  0% {
-    -webkit-transform: translate(0px, 0px) rotate(45deg);
-    transform: translate(0px, 0px) rotate(45deg);
-  }
-
-  50% {
-    -webkit-transform: translate(-15px, 0px) rotate(45deg);
-    transform: translate(-15px, 0px) rotate(45deg);
-  }
-
-  100% {
-    -webkit-transform: translate(0px, 0px) rotate(45deg);
-    transform: translate(0px, 0px) rotate(45deg);
-  }
-}
-
-@keyframes panR {
-  0% {
-    -webkit-transform: translate(0px, 0px) rotate(45deg);
-    transform: translate(0px, 0px) rotate(45deg);
-  }
-
-  50% {
-    -webkit-transform: translate(-15px, 0px) rotate(45deg);
-    transform: translate(-15px, 0px) rotate(45deg);
-  }
-
-  100% {
-    -webkit-transform: translate(0px, 0px) rotate(45deg);
-    transform: translate(0px, 0px) rotate(45deg);
-  }
-}
-
-@-webkit-keyframes slideL {
-  0% {
-    -webkit-transform: translate(0px, 0px) scale(0.5);
-    transform: translate(0px, 0px) scale(0.5);
-  }
-
-  50% {
-    -webkit-transform: translate(0px, 30px) scale(1.25);
-    transform: translate(0px, 30px) scale(1.25);
-  }
-
-  100% {
-    -webkit-transform: translate(30px, 30px) scale(0.5);
-    transform: translate(30px, 30px) scale(0.5);
-  }
-}
-
-@keyframes slideL {
-  0% {
-    -webkit-transform: translate(0px, 0px) scale(0.5);
-    transform: translate(0px, 0px) scale(0.5);
-  }
-
-  50% {
-    -webkit-transform: translate(0px, 30px) scale(1.25);
-    transform: translate(0px, 30px) scale(1.25);
-  }
-
-  100% {
-    -webkit-transform: translate(30px, 30px) scale(0.5);
-    transform: translate(30px, 30px) scale(0.5);
-  }
-}
-
-@-webkit-keyframes slideR {
-  0% {
-    -webkit-transform: translate(0px, 0px) scale(0.5);
-    transform: translate(0px, 0px) scale(0.5);
-  }
-
-  50% {
-    -webkit-transform: translate(30px, 0px) scale(1.25);
-    transform: translate(30px, 0px) scale(1.25);
-  }
-
-  100% {
-    -webkit-transform: translate(30px, 30px) scale(0.5);
-    transform: translate(30px, 30px) scale(0.5);
-  }
-}
-
-@keyframes slideR {
-  0% {
-    -webkit-transform: translate(0px, 0px) scale(0.5);
-    transform: translate(0px, 0px) scale(0.5);
-  }
-
-  50% {
-    -webkit-transform: translate(30px, 0px) scale(1.25);
-    transform: translate(30px, 0px) scale(1.25);
-  }
-
-  100% {
-    -webkit-transform: translate(30px, 30px) scale(0.5);
-    transform: translate(30px, 30px) scale(0.5);
   }
 }
 
