--- a/test/css/styles.css
+++ b/test/css/styles.css
@@ -628,6 +628,85 @@ body {
   background-image: url("../img/giftEmpty.png");
 }
 
+.inl {
+  display: inline-block;
+  vertical-align: top;
+  zoom: 1;
+}
+
+.comments {
+  display: block;
+  margin: 20px auto;
+  font-size: 0px;
+  max-width: 560px;
+  background: #ffffff;
+  padding: 0 20px;
+}
+
+.comments .comments-inner {
+  padding: 0px 0px;
+}
+
+.comments .comments-inner .comment-box {
+  margin: 20px 0px;
+  display: block;
+  padding: 0px 0px 20px;
+  border-bottom: 1px solid #d9d9d9;
+}
+
+.comments .comments-inner .comment-box .comment-pic {
+  width: 55px;
+}
+
+.comments .comments-inner .comment-box .comment-text {
+  width: 80%;
+}
+
+.comments .comments-inner .comment-box .comment-pic img {
+  display: block;
+  width: 55px;
+  margin: 0px 0px;
+}
+
+.comments .comments-inner .comment-box .comment-text .comment-text-inner {
+  padding: 0px 20px;
+}
+
+.comments .comments-inner .comment-box .comment-text .comment-text-inner h1 {
+  display: block;
+  margin: 2px 0px 0px !important;
+  font-size: 15px !important;
+  line-height: 16px !important;
+  border: none !important;
+  text-transform: none !important;
+  text-align: left;
+  text-transform: none;
+  font-weight: bold;
+  color: #006598;
+  font-family: inherit;
+  padding: 0px 0px 5px;
+}
+
+.comments .comments-inner .comment-box .comment-text .comment-text-inner p {
+  display: block;
+  margin: 5px 0px !important;
+  padding: 0px 0px;
+  font-size: 14px !important;
+  line-height: 16px !important;
+}
+
+.comments .comments-inner .comment-box .comment-text .comment-text-inner h2 {
+  display: block;
+  margin: 10px 0px 0px !important;
+  font-size: 13px !important;
+  line-height: 13px !important;
+  text-align: left;
+  text-transform: none;
+  color: #57585a;
+  font-style: normal;
+  padding: 0 0;
+}
+
 /* ================================================= */
 
 /* ================================================= */
