--- a/test/css/styles.css
+++ b/test/css/styles.css
@@ -213,7 +213,8 @@ body {
   color: #cccccc;
 }
 
-.w700 {
+.w700,
+.addComment .title {
   font-weight: 700;
 }
 
@@ -225,7 +226,8 @@ body {
   color: #ffffff;
 }
 
-.cDr {
+.cDr,
+.addComment .title {
   color: #131313;
 }
 
@@ -658,14 +660,14 @@ body {
   width: 55px;
 }
 
-.comments .comments-inner .comment-box .comment-text {
-  width: 80%;
-}
-
 .comments .comments-inner .comment-box .comment-pic img {
   display: block;
   width: 55px;
   margin: 0px 0px;
+}
+
+.comments .comments-inner .comment-box .comment-text {
+  width: 80%;
 }
 
 .comments .comments-inner .comment-box .comment-text .comment-text-inner {
@@ -695,6 +697,12 @@ body {
   line-height: 16px !important;
 }
 
+.comments .comments-inner .comment-box .comment-text .comment-text-inner img {
+  max-width: 400px;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
 .comments .comments-inner .comment-box .comment-text .comment-text-inner h2 {
   display: block;
   margin: 10px 0px 0px !important;
@@ -705,6 +713,97 @@ body {
   color: #57585a;
   font-style: normal;
   padding: 0 0;
+}
+
+.addComment {
+  display: block;
+  margin: 20px auto;
+  margin-top: -20px;
+  font-size: 0px;
+  max-width: 560px;
+  background: #ffffff;
+  padding: 20px;
+}
+
+.addComment .title {
+  text-align: center;
+  margin-bottom: 16px;
+}
+
+.addComment__form {
+  display: block;
+  width: 100%;
+}
+
+.addComment__input {
+  width: 100%;
+  display: block;
+  background: #eeeeee;
+  padding: 11px 11px 12px;
+  font-family: "Helvetica";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 17px;
+  color: #b0b0b0;
+  margin-bottom: 7px;
+}
+
+.addComment__input::-webkit-input-placeholder {
+  color: #b0b0b0;
+}
+
+.addComment__input::-moz-placeholder {
+  color: #b0b0b0;
+}
+
+.addComment__input:-ms-input-placeholder {
+  color: #b0b0b0;
+}
+
+.addComment__input::-ms-input-placeholder {
+  color: #b0b0b0;
+}
+
+.addComment__input::placeholder {
+  color: #b0b0b0;
+}
+
+.addComment__inputFiles {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
+.addComment__inputFiles .addComment__inputFile {
+  margin-right: 18px;
+}
+
+.addComment__inputFileText {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-family: "Helvetica";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 17px;
+  color: #3b59a3;
+}
+
+.addComment__inputFileText img {
+  margin-right: 4px;
+}
+
+.addComment__inputFile input {
+  display: none;
 }
 
 /* ================================================= */
